--- a/config.properties
+++ b/config.properties
@@ -1,4 +1,4 @@
-APP_URL=https://www.mypedia.pearson.com/
+APP_URL=
 BROWSER_NAME=ChromeDriver
 SHEET_NAME=testdata
 TEST_DATA_DIR=src//test//resources//testdata
